# norming

./: .gitignore  CNAME  Makefile  README.md  a-sign-of-the-times.html  a4.html  accept-all-cookies.html  credit-or-debit.html  electric-cars.html  frame-rates.html  index.html  main.css  music-notes.html  pdf.html  pyproject.toml  recommended-for-you.html  rss.xml
.github/workflows/: static.yml
episodes/: a-sign-of-the-times.md  a4.md  accept-all-cookies.md  captcha.md  credit-or-debit.md  daylight-saving.md  domain-names.md  electric-cars.md  five-day-work-week.md  frame-rates.md  guinness.md  leap-years.md  locks.md  music-notes.md  pdf.md  plugs.md  postcodes.md  qwerty.md  recommended-for-you.md  recycling.md  voting.md  wayback-machine.md  world-standards-day-2023.md
public/: a-sign-of-the-times.html  a4.html  accept-all-cookies.html  credit-or-debit.html  electric-cars.html  frame-rates.html  index.html  music-notes.html  pdf.html  recommended-for-you.html
static/: generate-signal.html  main.css  rss.xml  signalGenerator.js
templates/: footer.html  header.html  index.html  post.html
