[tool.poetry]
name = "norming"
version = "0.1.0"
description = "A succint podcast about norms. One episode per month, 10 minutes per episode. No more, no less."
authors = ["Michael McAndrew"]

[tool.poetry.dependencies]
python = "^3.9"
python-frontmatter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
